Fixes background attachment jumping on cellular

--- a/stylesheets/about_me_styles.css
+++ b/stylesheets/about_me_styles.css
@@ -20,44 +20,50 @@ body {
 }
 
 #fixed-bg {
+  content: "";
   top: 0;
-  background: -moz-linear-gradient(
-      top,
-      rgba(26, 26, 26, 1) 0%,
-      rgba(26, 26, 26, 0.7) 50%,
-      rgba(26, 26, 26, 1) 100%
-    ),
-    url("../public/about_me_background_3.png") no-repeat;
-  background: -webkit-gradient(
-      linear,
-      left top,
-      left bottom,
-      color-stop(0%, rgba(26, 26, 26, 1)),
-      color-stop(50%, rgba(26, 26, 26, 0.7)),
-      color-stop(100%, rgba(26, 26, 26, 1))
-    ),
-    url("../public/about_me_background_3.png") no-repeat;
-  background: -webkit-linear-gradient(
-      top,
-      rgba(26, 26, 26, 1) 0%,
-      rgba(26, 26, 26, 0.7) 50%,
-      rgba(26, 26, 26, 1) 100%
-    ),
-    url("../public/about_me_background_3.png") no-repeat;
-  background: -o-linear-gradient(
-      top,
-      rgba(26, 26, 26, 1) 0%,
-      rgba(26, 26, 26, 0.7) 50%,
-      rgba(26, 26, 26, 1) 100%
-    ),
-    url("../public/about_me_background_3.png") no-repeat;
-  background: -ms-linear-gradient(
-      top,
-      rgba(26, 26, 26, 1) 0%,
-      rgba(26, 26, 26, 0.7) 50%,
-      rgba(26, 26, 26, 1) 100%
-    ),
-    url("../public/about_me_background_3.png") no-repeat;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  position: fixed;
+
+  /*background: -moz-linear-gradient(*/
+  /*top,*/
+  /*rgba(26, 26, 26, 1) 0%,*/
+  /*rgba(26, 26, 26, 0.7) 50%,*/
+  /*rgba(26, 26, 26, 1) 100%*/
+  /*),*/
+  /*url("../public/about_me_background_3.png") no-repeat;*/
+  /*background: -webkit-gradient(*/
+  /*linear,*/
+  /*left top,*/
+  /*left bottom,*/
+  /*color-stop(0%, rgba(26, 26, 26, 1)),*/
+  /*color-stop(50%, rgba(26, 26, 26, 0.7)),*/
+  /*color-stop(100%, rgba(26, 26, 26, 1))*/
+  /*),*/
+  /*url("../public/about_me_background_3.png") no-repeat;*/
+  /*background: -webkit-linear-gradient(*/
+  /*top,*/
+  /*rgba(26, 26, 26, 1) 0%,*/
+  /*rgba(26, 26, 26, 0.7) 50%,*/
+  /*rgba(26, 26, 26, 1) 100%*/
+  /*),*/
+  /*url("../public/about_me_background_3.png") no-repeat;*/
+  /*background: -o-linear-gradient(*/
+  /*top,*/
+  /*rgba(26, 26, 26, 1) 0%,*/
+  /*rgba(26, 26, 26, 0.7) 50%,*/
+  /*rgba(26, 26, 26, 1) 100%*/
+  /*),*/
+  /*url("../public/about_me_background_3.png") no-repeat;*/
+  /*background: -ms-linear-gradient(*/
+  /*top,*/
+  /*rgba(26, 26, 26, 1) 0%,*/
+  /*rgba(26, 26, 26, 0.7) 50%,*/
+  /*rgba(26, 26, 26, 1) 100%*/
+  /*),*/
+  /*url("../public/about_me_background_3.png") no-repeat;*/
   background: linear-gradient(
       to bottom,
       rgba(26, 26, 26, 1) 0%,
@@ -67,17 +73,23 @@ body {
     url("../public/about_me_background_3.png") no-repeat;
 
   background-size: cover;
-  position: fixed;
 
-  -moz-background-attachment: fixed;
-  -webkit-background-attachment: fixed;
-  -o-background-attachment: fixed;
-  -ms-background-attachment: fixed;
-  background-attachment: fixed;
+  /*-moz-background-attachment: fixed;*/
+  /*-webkit-background-attachment: fixed;*/
+  /*-o-background-attachment: fixed;*/
+  /*-ms-background-attachment: fixed;*/
+  /*background-attachment: fixed;*/
 
-  width: 100%;
-  height: 100%;
+  /*width: 100%;*/
+  /*height: 100%;*/
   z-index: -1;
+}
+
+/* Additional style to fix potential scaling issues on mobile */
+@media screen and (max-width: 768px) {
+  #fixed-bg {
+    background-size: auto 100vh;
+  }
 }
 
 #container {
@@ -288,4 +300,3 @@ a {
 .intro p {
   font-size: 1.5rem;
 }
-
